--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
         <scene sceneID="jm9-GD-6eL">
             <objects>
                 <tableViewController id="sru-MH-sNP" customClass="QuestionsTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleAspectFit" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="101" sectionHeaderHeight="28" sectionFooterHeight="28" id="TZU-T2-dM9">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleAspectFit" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="101" sectionHeaderHeight="28" sectionFooterHeight="28" id="TZU-T2-dM9">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -119,7 +119,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="szK-ud-CTx">
-                                            <rect key="frame" x="18" y="5" width="549" height="94"/>
+                                            <rect key="frame" x="106" y="5" width="427" height="94"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="This is where all the questions are going to go. Is this the first Question?">
                                                     <attributes>
@@ -130,17 +130,40 @@
                                             </attributedString>
                                             <color key="highlightedColor" red="0.9888055788590604" green="0.0" blue="0.9329383389261745" alpha="1" colorSpace="calibratedRGB"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7CR-Ft-gSZ">
+                                            <rect key="frame" x="2" y="5" width="0.0" height="80"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" id="xZd-b4-FtN"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="faceIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Sm9-2j-nfz">
+                                            <rect key="frame" x="20" y="10" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="HbY-uJ-IAj"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="szK-ud-CTx" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="topMargin" constant="-3" id="3t4-Rj-AuW" userLabel="Question Text View.top = topMargin - 40"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="szK-ud-CTx" secondAttribute="trailing" constant="-42" id="CnL-bW-YPn"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="szK-ud-CTx" secondAttribute="bottom" constant="-7.5" id="GEs-yY-QNa"/>
-                                        <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="MdR-ZN-QYi" secondAttribute="leadingMargin" constant="10" id="opY-2L-xsI"/>
+                                        <constraint firstItem="7CR-Ft-gSZ" firstAttribute="top" secondItem="szK-ud-CTx" secondAttribute="top" id="5El-xT-kvh"/>
+                                        <constraint firstItem="Sm9-2j-nfz" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="top" constant="10" id="E9r-z1-r16"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Sm9-2j-nfz" secondAttribute="bottom" constant="31.5" id="EdT-kh-cBD"/>
+                                        <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="Sm9-2j-nfz" secondAttribute="trailing" constant="36" id="HWR-TK-HVA"/>
+                                        <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="Sm9-2j-nfz" secondAttribute="trailing" constant="36" id="VLo-H6-QvL"/>
+                                        <constraint firstItem="Sm9-2j-nfz" firstAttribute="leading" secondItem="7CR-Ft-gSZ" secondAttribute="trailing" constant="18" id="ZIb-yN-M66"/>
+                                        <constraint firstItem="7CR-Ft-gSZ" firstAttribute="leading" secondItem="MdR-ZN-QYi" secondAttribute="leadingMargin" constant="-6" id="aqV-9W-C0i"/>
+                                        <constraint firstItem="Sm9-2j-nfz" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="topMargin" constant="2" id="iMh-J2-qgg"/>
+                                        <constraint firstAttribute="bottom" secondItem="Sm9-2j-nfz" secondAttribute="bottom" constant="40" id="kAj-1X-NAo"/>
+                                        <constraint firstItem="Sm9-2j-nfz" firstAttribute="leading" secondItem="7CR-Ft-gSZ" secondAttribute="trailing" constant="18" id="nTg-Pj-ruY"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="7CR-Ft-gSZ" secondAttribute="bottom" constant="6.5" id="rSl-PZ-JQV"/>
+                                        <constraint firstItem="7CR-Ft-gSZ" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="topMargin" constant="-3" id="xPy-Ku-A9g"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="szK-ud-CTx" secondAttribute="bottom" constant="-7.5" id="yq5-6c-Akw"/>
+                                        <constraint firstAttribute="trailing" secondItem="szK-ud-CTx" secondAttribute="trailing" id="z9f-9q-E5i"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <connections>
                                     <outlet property="questionTextView" destination="szK-ud-CTx" id="sR4-zH-ADi"/>
-                                    <segue destination="DcE-2c-65V" kind="push" id="Zhk-j4-dJu"/>
+                                    <segue destination="VfX-TX-JCP" kind="showDetail" id="clK-rz-C0p"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -154,6 +177,72 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KwV-9j-j5D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2302" y="396"/>
+        </scene>
+        <!--Compose Answer View Controller-->
+        <scene sceneID="iYL-tr-Cur">
+            <objects>
+                <viewController storyboardIdentifier="ComposeAnswerViewController" id="VfX-TX-JCP" customClass="ComposeAnswerViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NWs-AW-rvc"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ozn-eZ-J7x"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3Mc-tX-cav">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view alpha="0.65000000000000002" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u1e-AI-grd" customClass="ComposeAnswerView">
+                                <rect key="frame" x="64" y="114" width="460" height="404"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PdO-iX-Yx0">
+                                        <rect key="frame" x="160" y="297" width="122" height="46"/>
+                                        <state key="normal" title="Answer"/>
+                                    </button>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" keyboardDismissMode="interactive" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="plO-ax-kp8">
+                                        <rect key="frame" x="21" y="24" width="418" height="356"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <attributedString key="attributedText"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.6259014423" green="0.12618491800000001" blue="0.24927187619999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="plO-ax-kp8" firstAttribute="top" secondItem="u1e-AI-grd" secondAttribute="top" constant="21" id="Cyr-hY-K3a"/>
+                                    <constraint firstItem="plO-ax-kp8" firstAttribute="leading" secondItem="u1e-AI-grd" secondAttribute="leading" constant="20" id="JfH-YL-SqX"/>
+                                    <constraint firstItem="plO-ax-kp8" firstAttribute="top" secondItem="u1e-AI-grd" secondAttribute="top" constant="20" id="S2g-Dw-EHK"/>
+                                    <constraint firstAttribute="trailing" secondItem="plO-ax-kp8" secondAttribute="trailing" constant="20" id="mvr-QB-b14"/>
+                                    <constraint firstAttribute="bottom" secondItem="plO-ax-kp8" secondAttribute="bottom" constant="20" id="trE-QT-hpY"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Cyr-hY-K3a"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <outlet property="button" destination="PdO-iX-Yx0" id="FdO-n8-AYC"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ozn-eZ-J7x" firstAttribute="top" secondItem="u1e-AI-grd" secondAttribute="bottom" constant="25" id="LJ1-sj-bcQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="u1e-AI-grd" secondAttribute="trailing" constant="25" id="Zu3-Nz-XQt"/>
+                            <constraint firstItem="u1e-AI-grd" firstAttribute="top" secondItem="NWs-AW-rvc" secondAttribute="bottom" constant="25" id="byq-Re-Uci"/>
+                            <constraint firstItem="Ozn-eZ-J7x" firstAttribute="top" secondItem="u1e-AI-grd" secondAttribute="bottom" constant="82" id="mNv-R3-vzt"/>
+                            <constraint firstItem="u1e-AI-grd" firstAttribute="leading" secondItem="3Mc-tX-cav" secondAttribute="leadingMargin" constant="25" id="wLl-x0-W5q"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="mNv-R3-vzt"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="textView" destination="plO-ax-kp8" id="wzy-39-NFe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ebj-Pc-kvy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2302" y="1102"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vnp-Nn-sYA">
@@ -192,4 +281,7 @@
             <point key="canvasLocation" x="2986" y="396"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="faceIcon" width="50" height="50"/>
+    </resources>
 </document>
